<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/primaryColor"
            app:expandedTitleGravity="bottom|start"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            tools:title="@string/app_name">

            <ImageView
                android:id="@+id/ivDetailGame"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/game_image"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="@drawable/gradient_game_image" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:contentDescription="@string/favorite_button"
        android:src="@drawable/ic_favorite_selector"
        app:layout_anchor="@id/appBarDetail"
        app:layout_anchorGravity="bottom|end" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRatingDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@id/tvGenresDetail"
                app:layout_constraintEnd_toStartOf="@id/tvMetaCriticDetail"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="4.2★" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvMetaCriticDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/round_corner"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tvRatingDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvRatingDetail"
                app:layout_constraintTop_toTopOf="@id/tvRatingDetail"
                tools:text="78" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvGenresDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@id/etvAboutDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRatingDetail"
                tools:text="Action, Adventure" />

            <com.ms.square.android.expandabletextview.ExpandableTextView xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                android:id="@+id/etvAboutDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                expandableTextView:animDuration="200"
                expandableTextView:layout_constraintBottom_toTopOf="@id/elvDetail"
                expandableTextView:layout_constraintEnd_toEndOf="parent"
                expandableTextView:layout_constraintStart_toStartOf="parent"
                expandableTextView:layout_constraintTop_toBottomOf="@id/tvGenresDetail"
                expandableTextView:maxCollapsedLines="3">

                <TextView
                    android:id="@id/expandable_text"
                    style="@style/Theme.Gamesss.Section.About"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dignissim purus a orci maximus accumsan. Praesent efficitur neque id sagittis tempus. Aliquam erat volutpat. Nam sit amet erat pretium, blandit dolor in, sagittis metus. Donec non auctor massa, eu porta velit. Sed vitae orci felis. Praesent est metus, condimentum non purus vel, consectetur consequat magna. Vivamus ut tincidunt lacus, vel faucibus nulla. In mi nulla, placerat non dui et, dictum faucibus sapien. Pellentesque sed lobortis lorem." />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/show_more"
                    android:padding="16dp" />

            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <ExpandableListView
                android:id="@+id/elvDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="5dp"
                android:groupIndicator="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etvAboutDetail"
                tools:listheader="" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/loadingDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/loading_detail" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <include
        android:id="@+id/errorDetail"
        layout="@layout/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>