<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorite"/>

</menu>