...
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivClearButton"
        app:layout_constraintStart_toEndOf="@id/cvFavoriteGameImageRow"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Game Name" />

    <ImageView
        android:id="@+id/ivClearButton"
...
